sam-internal/k8s-out/prd/prd-samtest/istio-sidecar-injector-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    manifestctl.sam.data.sfdc.net/swagger: disable
  labels:
    app: istio-sidecar-injector
    chart: sidecarInjectorWebhook-1.0.1
    heritage: Tiller
    release: RELEASE-NAME
  name: istio-sidecar-injector
  namespace: service-mesh
webhooks:
- clientConfig:
    caBundle: ""
    service:
      name: istio-sidecar-injector
      namespace: service-mesh
      path: /inject
  failurePolicy: Fail
  name: sidecar-injector.istio.io
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
